--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
+    "@chainapsis/cosmosjs": "^0.0.3-alpha.3",
+    "@chainapsis/ts-amino": "^0.0.1-alpha.4",
     "@cosmjs/stargate": "^0.24.0-alpha.10",
     "@crypto-com/chain-jslib": "^0.0.4",
+    "@ledgerhq/hw-transport-node-hid": "^5.36.0",
+    "@ledgerhq/hw-transport-u2f": "^5.36.0-deprecated",
+    "@ledgerhq/hw-transport-webusb": "^5.36.0",
     "@types/crypto-js": "^4.0.1",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/node": "^14.14.10",
@@ -25,6 +30,7 @@
     "electron-devtools-installer": "^3.1.1",
     "electron-is-dev": "^1.2.0",
     "electron-reload": "^1.5.0",
+    "ledger-cosmos-js": "^2.1.8",
     "less-vars-to-js": "^1.3.0",
     "nedb-promises": "^4.1.0",
     "qrcode.react": "^1.0.0",
