--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,12 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
 
     steps:
+      - name: setup dependencies
+        if: startsWith(matrix.os, 'ubuntu')
+        with:
+          sudo apt-get update
+          sudo apt-get install -y libusb-1.0-0-dev  libudev-dev
+
       - name: Check out Git repository
         uses: actions/checkout@v1
 
