--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
+    "@babel/helper-builder-react-jsx": "^7.10.4",
+    "@babel/helper-builder-react-jsx-experimental": "^7.12.11",
+    "@chainapsis/cosmosjs": "^0.0.3-alpha.3",
+    "@chainapsis/ts-amino": "^0.0.1-alpha.4",
     "@cosmjs/stargate": "^0.24.0-alpha.10",
-    "@crypto-com/chain-jslib": "^0.0.5",
+    "@crypto-com/chain-jslib": "^0.0.6",
+    "@ledgerhq/hw-transport-node-hid": "^5.36.0",
+    "@ledgerhq/hw-transport-webhid": "^5.38.0",
+    "@ledgerhq/hw-transport-webusb": "^5.38.0",
+    "@types/big.js": "^6.0.1",
     "@types/crypto-js": "^4.0.1",
+    "@types/electron": "^1.6.10",
     "@types/electron-devtools-installer": "^2.2.0",
+    "@types/long": "^4.0.1",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -27,7 +37,9 @@
     "electron-devtools-installer": "^3.1.1",
     "electron-is-dev": "^1.2.0",
     "electron-reload": "^1.5.0",
+    "ledger-cosmos-js": "^2.1.8",
     "less-vars-to-js": "^1.3.0",
+    "long": "^4.0.0",
     "nedb-promises": "^4.1.0",
     "qrcode.react": "^1.0.0",
     "react": "^17.0.1",
@@ -42,13 +54,14 @@
     "ts-pnp": "1.2.0",
     "typescript": "4.0.5",
     "url-loader": "4.1.1",
+    "usb": "^1.6.3",
     "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --watchAll=false",
-    "postinstall": "electron-builder install-app-deps",
+    "postinstall": "node scripts/postinstall.js && electron-builder install-app-deps",
     "electron:dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && tsc -p electron -w\" \"wait-on http://localhost:3000 && tsc -p electron && electron .\"",
     "electron:windev": "concurrently \"SET BROWSER=none && yarn start\" \"wait-on http://localhost:3000 && tsc -p electron -w\" \"wait-on http://localhost:3000 && tsc -p electron && electron .\"",
     "electron:pre-build": "yarn build && yarn copy-macos-manifest && tsc -p electron",
@@ -148,7 +161,7 @@
     "css-loader": "4.3.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "electron": "^11.0.3",
+    "electron": "^11.1.1",
     "electron-builder": "^22.9.1",
     "electron-builder-notarize": "^1.2.0",
     "eslint": "^7.10.0",
