--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.6",
+    "@zondax/zemu": "^0.2.4",
     "antd": "^4.9.1",
     "axios": "^0.21.1",
     "bfj": "^7.0.2",
