--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.6",
-    "@zondax/zemu": "^0.2.4",
+    "@zondax/zemu": "^0.11.5",
     "antd": "^4.9.1",
     "axios": "^0.21.1",
     "bfj": "^7.0.2",
@@ -62,6 +62,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --watchAll=false",
+    "integrationtest": "node tests/debug.mjs",
     "postinstall": "node scripts/postinstall.js && electron-builder install-app-deps",
     "electron:dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && tsc -p electron -w\" \"wait-on http://localhost:3000 && tsc -p electron && electron .\"",
     "electron:windev": "concurrently \"SET BROWSER=none && yarn start\" \"wait-on http://localhost:3000 && tsc -p electron -w\" \"wait-on http://localhost:3000 && tsc -p electron && electron .\"",
